Fix href urls for loogin.html

--- a/loogin.html
+++ b/loogin.html
@@ -5,7 +5,7 @@
         <title>Egypt Fly</title>
         <!-- external style-->
         <link rel="shortcut icon" href="kk.jpg">
-        <link rel="stylesheet" href="../CSS/login.css">
+        <link rel="stylesheet" href="./CSS/login.css">
         <!-- internal style-->
         <style></style>
     </head>
@@ -23,7 +23,7 @@
                 <label><input type="checkbox"> remember me </label>
             <a href="#">Forgot password?</a>
             </div>
-            <a href="../HTML/index.html" target="_blank" class="btn" >login</a>
+            <a href="./HTML/index.html" target="_blank" class="btn" >login</a>
             <div class="register-link">
                 <p>Don't have an account?? <a href="#">Register</a></p>
             </div>
