Fix href urls for Hotels.html

--- a/HTML/Hotels.html
+++ b/HTML/Hotels.html
@@ -27,7 +27,7 @@
           <img src="../IMG/egypt.jpg">
       </div>
       <div class="link">
-          <a target="_blank" href="D:\welcome IT\HTML\egypt.html"> <i class="fas fa-location-dot"></i> Cairo/Egypt </a> 
+          <a target="_blank" href="..\HTML\egypt.html"> <i class="fas fa-location-dot"></i> Cairo/Egypt </a> 
       </div>  
   </div>
   <div class="location" id="France">
@@ -35,7 +35,7 @@
           <img src="../IMG/ff4.jpg">
       </div>
       <div class="link">
-          <a target="_blank" href="D:\welcome IT\HTML\france.HTML"> <i class="fas fa-location-dot"></i> Paris/France </a> 
+          <a target="_blank" href="..\HTML\france.HTML"> <i class="fas fa-location-dot"></i> Paris/France </a> 
       </div>  
   </div>
   <div class="location" id="SaudiArabia">
@@ -43,7 +43,7 @@
           <img src="../IMG/sudia.jpg">
       </div>
       <div class="link">
-          <a target="_blank" href="D:\welcome IT\HTML\Saudi.html" title="Visit Saudi Arabia"> <i class="fas fa-location-dot"></i> Mekkah/Saudi Arabia </a> 
+          <a target="_blank" href="..\HTML\Saudi.html" title="Visit Saudi Arabia"> <i class="fas fa-location-dot"></i> Mekkah/Saudi Arabia </a> 
       </div>  
   </div>
   </div>
@@ -52,7 +52,7 @@
           <img src="../IMG/germany.jpg">
       </div>
       <div class="link">
-          <a target="_blank" href="D:\welcome IT\HTML\practice.html"> <i class="fas fa-location-dot"></i> Berlin/Germany </a> 
+          <a target="_blank" href=".\HTML\practice.html"> <i class="fas fa-location-dot"></i> Berlin/Germany </a> 
       </div>  
   </div>
   <div class="location" id="Mexico">
@@ -76,7 +76,7 @@
           <img src="../IMG/USA.jpg">
       </div>
       <div class="link">
-          <a target="_blank" href="D:\welcome IT\HTML\index.amrica.html"> <i class="fas fa-location-dot"></i> New York/USA </a> 
+          <a target="_blank" href="..\HTML\index.amrica.html"> <i class="fas fa-location-dot"></i> New York/USA </a> 
       </div>  
   </div>
   <div class="location" id="Turkey">
