--- a/HTML/payment.html
+++ b/HTML/payment.html
@@ -24,13 +24,13 @@
             <input type="text" id="name" name="name" placeholder="Kerollos" required>
             <br><br>
             <label for="card">Card Number: </label>
-            <input type="text" id="card" name="card" placeholder="0000 0000 0000 0000" maxlength="19" required>
+            <input type="text" id="card" name="card" placeholder="0000 0000 0000 0000" maxlength="19" minlength="19" required>
             <br><br>
             <label>Expiration Date: </label>
-            <input type="text" id="expiry" name="expiry" placeholder="MM/YY" required>
+            <input type="text" id="expiry" name="expiry" placeholder="MM/YY" maxlength="5" minlength="5" required>
             <br><br>
             <label for="cvv">CVV: </label>
-            <input type="text" id="cvv" name="cvv" maxlength="3" required>
+            <input type="text" id="cvv" name="cvv" maxlength="3" minlength="3" required>
             <br><br>
             <button>Submit</button>
         </form>
