Fix href URLs for Hotels.html

--- a/HTML/Hotels.html
+++ b/HTML/Hotels.html
@@ -52,7 +52,7 @@
           <img src="../IMG/germany.jpg">
       </div>
       <div class="link">
-          <a target="_blank" href=".\HTML\practice.html"> <i class="fas fa-location-dot"></i> Berlin/Germany </a> 
+          <a target="_blank" href="..\HTML\practice.html"> <i class="fas fa-location-dot"></i> Berlin/Germany </a> 
       </div>  
   </div>
   <div class="location" id="Mexico">
